# optimus-cpp

./: .gitignore  CMakeLists.txt  README.md
example/: main.cpp
src/: millerrabin.cpp  millerrabin.h  optimus.cpp  optimus.h
test/: main.cpp
